RESOLVED FIXED155229
[GTK] Artifacts when using web view background color
https://bugs.webkit.org/show_bug.cgi?id=155229
Summary [GTK] Artifacts when using web view background color
Carlos Garcia Campos
Reported 2016-03-09 04:38:11 PST
This is easy to reproduce by using the MiniBrowser in editable mode, try something like this: MiniBrowser --bg-color="rgba(255,0,0,1)" -e Write someting and move the cursor or select text, you will see that some areas are not repainted at all. This is because when using a web view color, we fill with the color every rectangle updated by the web process, but we should always fill the entire backing store before rendering the actual contents on top.
Attachments
Patch (2.65 KB, patch)
2016-03-09 04:43 PST, Carlos Garcia Campos
no flags
Different approach (2.39 KB, patch)
2016-03-09 05:16 PST, Carlos Garcia Campos
mario: review+
Carlos Garcia Campos
Comment 1 2016-03-09 04:43:20 PST
Carlos Garcia Campos
Comment 2 2016-03-09 04:50:59 PST
Comment on attachment 273422 [details] Patch This doesn't work, sometimes we render the bg color over the contents
Carlos Garcia Campos
Comment 3 2016-03-09 05:16:35 PST
Created attachment 273423 [details] Different approach This fixes the problem from the web process side. It's a it more aggressive, because it always sends updates to the Ui process for the whole visible content rectangle, but it's the only way I've managed to fix the problem.
Mario Sanchez Prada
Comment 4 2016-03-09 06:08:01 PST
Comment on attachment 273423 [details] Different approach I've been poking at this code recently and this change makes sense to me. r+
Carlos Garcia Campos
Comment 5 2016-03-09 23:13:43 PST
Note You need to log in before you can comment on or make changes to this bug.