[GTK] Artifacts when using web view background color https://bugs.webkit.org/show_bug.cgi?id=155229

Reviewed by Mario Sanchez Prada.

This is because when using a web view color, we fill with the
color every rectangle updated by the web process, but we should
always fill the entire backing store before rendering the actual
contents on top.

* WebProcess/WebPage/DrawingAreaImpl.cpp:
(WebKit::DrawingAreaImpl::display): Ensure the web process always
renders the whole visible rectangle when background is rendered by
the UI process.

Canonical link: https://commits.webkit.org/173401@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@197927 268f45cc-cd09-0410-ab3c-d52691b4dbfc